[gd_scene load_steps=2 format=3 uid="uid://bjk1sij5hryim"]

[ext_resource type="Script" uid="uid://27v3f8x20ygv" path="res://scripts/LoginScreen.gd" id="1_qucne"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qucne")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
theme_override_constants/separation = 28
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GAME LOGIN"
horizontal_alignment = 1

[node name="UsernameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"
secret = true
secret_character = "*"

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "login"

[node name="RegisterButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "registrati"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Benvenuto!"
horizontal_alignment = 1
